[tool.poetry]
name = "ddmc"
version = "0.1.0"
description = ""
authors = ["Aaron Meyer <git@asmlab.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
SciPy = "^1.11.4"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
svgutils = "^0.3.4"
pandas = "^2.1.4"
panflute = "^2.3.0"
biopython = "^1.83"
scikit-learn = "1.4.0"
bioinfokit = "^2.1.3"
statsmodels = "^0.14.1"
fancyimpute = "^0.7.0"
mygene = "^3.2.2"
logomaker = "^0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]                                                           
fbuild = "ddmc.figures.common:genFigure"
